--- a/project.json
+++ b/project.json
@@ -6,7 +6,7 @@
     },
     "live": {
       "bucket": "projects.seattletimes.com",
-      "path": "2020/business/biz-quiz"
+      "path": "2020/business/biz-quiz-boeing-unemployment-washington"
     }
   },
   "title": "",
